--- a/index.ipynb
+++ b/index.ipynb
@@ -1137,7 +1137,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.loc[(df['Year'] == 1950) & (df['Stage'] == 'Group 3'), 'Attendance']"
+    "df.loc[(df['Year'] == 1950) & (df['Stage'] == 'Group 3'), ['Attendance']"
    ]
   },
   {
@@ -1251,13 +1251,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 100,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Algeria',\n",
+       " 'Argentina',\n",
+       " 'Belgium',\n",
+       " 'Brazil',\n",
+       " 'Bulgaria',\n",
+       " 'Canada',\n",
+       " 'Denmark',\n",
+       " 'England',\n",
+       " 'France',\n",
+       " 'Germany FR',\n",
+       " 'Hungary',\n",
+       " 'Iraq',\n",
+       " 'Italy',\n",
+       " 'Korea Republic',\n",
+       " 'Mexico',\n",
+       " 'Morocco',\n",
+       " 'Northern Ireland',\n",
+       " 'Paraguay',\n",
+       " 'Poland',\n",
+       " 'Portugal',\n",
+       " 'Scotland',\n",
+       " 'Soviet Union',\n",
+       " 'Spain',\n",
+       " 'Uruguay'}"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "games_1986_worldcup = df[df['Year']==1986]\n",
+    "countries_1986_worldcup = df[df['Year']==1986][['Home Team Name', 'Away Team Name']]\n",
+    "unique_countries_1986_worldcup = set(countries_1986_worldcup['Home Team Name']).union(set(countries_1986_worldcup['Away Team Name']))\n",
+    "unique_countries_1986_worldcup"
    ]
   },
   {
